Unexpected EEVEE results when shaders interact with a node group #66000

Closed
opened 2019-06-21 19:15:40 +02:00 by LapisSea · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-21 15:07, hash: a887e1ea43

Short description of error
When a mix or add shader node is contained in a node group and under some circumstances (explained below) it will result in eevee outputting an unexpected material. This can appear in a range of unexpected behaviors such as: using UVs as normals, ignoring a part of a material, outputting a purple error material and other harder to explain results.

The most consistent and easily reproducible circumstance seems to be when using a displacement output so it will be used as an example and in the attached file below.

Exact steps for others to reproduce the error

  • Create a an object with a material
  • In the material add 2 or more shaders and a value or any kind for each corresponding shader
  • Add a mix shader node and a mix RGB node and mix both shader and values
  • Add any texture node and connect the fac output in to the fac of the mix nodes to make the mixing apparent
  • Add a displacement node and connect the mixed value in height and the output of that in to the material output
  • Connect the mix shader output in to the surface of material output

Bug example.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-21 15:07, hash: `a887e1ea43` **Short description of error** When a mix or add shader node is contained in a node group and under some circumstances (explained below) it will result in eevee outputting an unexpected material. This can appear in a range of unexpected behaviors such as: using UVs as normals, ignoring a part of a material, outputting a purple error material and other harder to explain results. The most consistent and easily reproducible circumstance seems to be when using a displacement output so it will be used as an example and in the attached file below. **Exact steps for others to reproduce the error** - Create a an object with a material - In the material add 2 or more shaders and a value or any kind for each corresponding shader - Add a mix shader node and a mix RGB node and mix both shader and values - Add any texture node and connect the fac output in to the fac of the mix nodes to make the mixing apparent - Add a displacement node and connect the mixed value in height and the output of that in to the material output - Connect the mix shader output in to the surface of material output [Bug example.blend](https://archive.blender.org/developer/F7440182/Bug_example.blend)
Author

Added subscriber: @LapisSea

Added subscriber: @LapisSea
Clément Foucault was assigned by Sebastian Parborg 2019-06-24 10:31:44 +02:00

This issue was referenced by 5b3530e480

This issue was referenced by 5b3530e4805f35202eeab57253c02b144f838134

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66000
No description provided.